# SurvivorWorld

./: .gitignore  LICENSE  README.md  dialogue_test.ipynb  mygame.ipynb  playthrough.txt  pyproject.toml  requirements.txt  run_experiment.py  run_game.py  setup.py
SW_venv/: pyvenv.cfg
assets/: persona_profiles.json
notebooks/: SurvivorWorld_HW1.ipynb
playthrough/: GenerativeAgents_individual-memory.txt  Movable_agents.txt  Movable_agents_expanded_commands.txt  auto-agent-action-selection.txt  auto-agent-with-personas.txt  auto-agents-with-reflection.txt  example_round
test/: action_castle.py  experiment_game.py  experiment_game_runner.py  game_setup.py  runner.py  test.ipynb  test_agent.py  test_game.py
test/exploration_personas/: Eliot_Vance_Detective.json  Lara_Diaz_Explorer.json
test/game_personas/: Aiden Blackwood_100928940491722029.json  Aisha Khan_705770916895606869.json  Akua_Wekesa_946380687829809385.json  Alexandra Drake_090931860594702030.json  Buster_Long_100s.json  Derek_Wilson_100s.json  Elena Blackwood_091029890489671930.json  Eliana Patel_584858495850616751.json  Esperanza Navarro_838568359277637883.json  Harold Jenkins_191567831080562033.json  Jamal Malik_837382768167507770.json  Jason_Thompson_0000000000.json  Madeline Greene_201567771080541934.json  Madeline_Greene_100s.json  Marisol_Garcia_798873358874678180.json  Mason Liu_3520391045669824960.json  Morgan_Griffin_0s.json  Roxanne_Perch_0000000000.json  Ryan Patel_717325192019346214.json  Stephanie_Wilks_0000000000.json  (+1 more)
text_adventure_games/: games.py  parsing.py  test_game.py  viz.py
(+75 files in other folders)
