[project]
name = "survivorworld"
version = "0.1.0"
description = "Play Survivor Against Generative Agents!"
authors = [{ name = "Sam Thudium", email = "sthudium1@email.com" }]
readme = "README.md"
dependencies = [
    # List your package dependencies here
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = { "survivorworld" = ["assets/*"] }
